// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render doing tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-wneatz"
    >
      正在执行
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render failed tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-red ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-tg454x"
    >
      执行失败
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render initialized tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-d31ub5"
    >
      准备执行
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render manually_executed tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1h1nm3c"
    >
      人工执行
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render succeeded tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-6zycqe"
    >
      执行成功
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render terminate_failed tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-red ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-tg454x"
    >
      中止失败
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render terminate_succeeded tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-6zycqe"
    >
      中止成功
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/execStatusMap render terminating tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-wneatz"
    >
      正在中止
    </span>
  </div>
</body>
`;
